crates/keron-lang/tests/corpus/errors/parse/pattern_lowercase_struct_name.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: struct pattern names must start with an uppercase letter
  --> 2:3
  |
2 |   point { x } => "point",
  |   ^
  = help: capitalize the leading letter — struct names are uppercase, binds are lowercase.
